Media responsive, fixed <480px head pages wrong alignment bug

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,6 +35,11 @@ body {
   #title {
       margin-left: 40px;
   }
+  @media (max-width: 30em) {
+    .masthead-title {
+      font-size: 16px;
+    }
+  }
 }
 
 #share {
